<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFF"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/ToolBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/search_edit"
            style="@android:style/Theme.Material.InputMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="No Results"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_search_24px"
            android:drawablePadding="8dp"
            android:drawableTint="@android:color/darker_gray"
            android:elevation="3dp"
            android:fontFamily="@font/gsans_reg"
            android:hint="@string/search_parts"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minHeight="32dp"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/range_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="200dp"
            app:cardCornerRadius="4dp"
            app:cardPreventCornerOverlap="false"
            app:contentPaddingTop="24dp"
            app:contentPaddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_edit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price_range_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/price_range_text"
                    android:textColor="@android:color/black"
                    android:textSize="32sp" />

                <com.jaygoo.widget.RangeSeekBar
                    android:id="@+id/rangeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rsb_indicator_background_color="@color/colorPrimary"
                    app:rsb_max="100"
                    app:rsb_min="0"
                    app:rsb_min_interval="20"
                    app:rsb_mode="range"
                    app:rsb_progress_color="@color/colorPrimary"
                    app:rsb_step_color="@color/colorPrimary"
                    app:rsb_indicator_width="40dp"
                    app:rsb_indicator_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="16dp"
                    app:rsb_indicator_show_mode="alwaysShow"
                    app:rsb_indicator_radius="8dp"
                    app:rsb_thumb_drawable="@drawable/ic_dot_24px" />

                <TextView
                    android:id="@+id/vehicle_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/price_lkr_2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/select_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="200dp"
            app:cardCornerRadius="4dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range_card"
            app:layout_constraintVertical_bias="0.054">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:hint="@string/select_category"
                    android:labelFor="@+id/select_category_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/select_category_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textFilter" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:hint="@string/select_location"
                    android:labelFor="@id/select_location_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/select_location_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textFilter" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_type"
                    android:layout_marginBottom="18dp"
                    android:labelFor="@id/select_type_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/select_type_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textFilter" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_date"
                    android:labelFor="@id/select_date_dropdown"
                    app:endIconDrawable="@drawable/ic_date_24px">

                    <AutoCompleteTextView
                        android:id="@+id/select_date_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:text="@string/advanced_search"
            app:icon="@drawable/ic_filter_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_card"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>