<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    tools:context=".activity.SearchVehicleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFF"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/ToolBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_edit"
        style="@android:style/Theme.Material.InputMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="No Results"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_search_24px"
        android:drawablePadding="8dp"
        android:drawableTint="@android:color/darker_gray"
        android:elevation="3dp"
        android:fontFamily="@font/gsans_reg"
        android:hint="@string/search_placeholder"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:minHeight="32dp"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/range_card"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="200dp"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false"
        app:contentPaddingTop="24dp"
        app:contentPaddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/price_range_text"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/rangeSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rsb_indicator_background_color="@color/colorPrimary"
                app:rsb_max="100"
                app:rsb_min="0"
                app:rsb_min_interval="20"
                app:rsb_mode="range"
                app:rsb_progress_color="@color/colorPrimary"
                app:rsb_step_color="@color/colorPrimary"
                app:rsb_indicator_width="40dp"
                app:rsb_indicator_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="16dp"
                app:rsb_indicator_show_mode="alwaysShow"
                app:rsb_indicator_radius="8dp"
                app:rsb_thumb_drawable="@drawable/ic_dot_24px" />

            <TextView
                android:id="@+id/vehicle_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="12dp"
                android:text="@string/price_lkr"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/select_card"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="200dp"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/brand_dropdown"
            android:layout_marginBottom="18dp"
            android:hint="@string/brand_hint">

            <AutoCompleteTextView
                android:id="@+id/brand_dropdown"
                android:layout_width="match_parent"
                android:inputType="textFilter"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/model_dropdown"
            android:hint="@string/model_hint">

            <AutoCompleteTextView
                android:id="@+id/model_dropdown"
                android:inputType="textFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/advanced_search"
        app:icon="@drawable/ic_filter_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>